Corrected code overflow on mobile view

--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -3,11 +3,8 @@
  *
  * ------------------------------------------------------------------- */
 
-.highlight {
-overflow: auto;
-}
-
 .highlight pre {
+overflow: auto;
 border-radius: 6px;
 color:#fdce93;
 background-color:#3f3f3f;
